fixed description overflow for exercises that have large descriptions

--- a/ui/css/StyleSheet.css
+++ b/ui/css/StyleSheet.css
@@ -294,8 +294,7 @@ p
 {
 width: 530px;
 left: 200px;
-position: absolute;
-
+position: relative;
 padding: 24px;
 }
 .date
