--- a/ui/css/all.css
+++ b/ui/css/all.css
@@ -519,12 +519,14 @@ h1, #contents h2, #contents h4, #contents h5, #contents h6
 }
 h2
 {
+    color: #2e3a54;
     font-size: 24px;
     line-height: 24px;
     text-transform: uppercase;
 }
 h4
 {
+    color: #2e3a54;
     font-size: 16px;
     line-height: 24px;
     margin: 0 0 12px;
@@ -532,6 +534,7 @@ h4
 }
 h5
 {
+    color: #2e3a54;
     font-size: 14px;
     margin: 0;
     margin-top: 4px;
